# claude-opus-4-7-tokenizer

./: .gitignore  README.md  pyproject.toml  run.sh  vocab_46.json  vocab_47.json
corpus_data/: wiki_ai.xml  wiki_ja.xml  wiki_py.xml  wiki_ru.xml  wiki_zh.xml
corpus_eff/: ar_wiki_quran.txt  el_wiki_athens.txt  en_wiki_news_ai.txt  he_wiki_jerusalem.txt  hi_wiki_delhi.txt  ja_wiki_tokyo.txt  ko_wiki_korean.txt  ko_wiki_seoul.txt  ru_classical_dubrovsky.txt  ru_classical_pushkin.txt  ru_wiki_dostoevsky.txt  ru_wiki_moscow.txt  ru_wiki_news_ai.txt  th_wiki_bangkok.txt  zh_wiki_beijing.txt
docs/: COMPARE_46_47.md  EFFICIENCY.md  RESULTS.md  VALIDATE_NOVEL.md  methods.md
reference/: REPORT.md  ctoc.cc  gen_vocab.py  vocab.json
scripts/: run_all_after.sh  status.sh
src/: candidates.py  compare_46_47.py  corpus.py  counter.py  efficiency_study.py  greedy.py  pipeline.py  probe_adjacent.py  probe_constraint.py  probe_more.py  probe_smart.py  store.py  validate_novel.py
state/: efficiency.csv  phase_adjacent.0000.csv  phase_boundary.0000.csv  phase_brute.0000.csv  phase_brute_full.0000.csv  phase_constraint.0000.csv  phase_context.0000.csv  phase_corpus.0000.csv  phase_dict.0000.csv  phase_dp.0000.csv  phase_eval_sub.0000.csv  phase_handcrafted.0000.csv  phase_hf.0000.csv  phase_kgram.0000.csv  phase_mega.0000.csv  phase_multilingual.0000.csv  phase_ngram.0000.csv  phase_port.0000.csv  phase_probe_more.0000.csv  phase_smart_miner.0000.csv  phase_tiktoken.0000.csv  phase_triangulate.0000.csv  validate_only47_on_46.csv  validate_only47_on_47.csv
(+2 files in other folders)
