[project]
name = "claude-tokenizer"
version = "0.1.0"
description = "Reconstruct Claude Opus 4.7 tokenizer via count_tokens API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tiktoken>=0.8",
    "transformers>=4.46",
    "sentencepiece>=0.2",
    "protobuf>=5",
    "tqdm>=4.66",
]
